Add upgrade note for #15147.

--- a/website/content/docs/upgrading/upgrade-to-1.9.x.mdx
+++ b/website/content/docs/upgrading/upgrade-to-1.9.x.mdx
@@ -97,6 +97,8 @@ See [this blog post](https://go.dev/blog/tls-cipher-suites) for more information
 
 @include 'pki-forwarding-bug.mdx'
 
+@include 'raft-panic-old-tls-key.mdx'
+
 ## Known Issues
 
 ### Identity Token Backend Key Rotations
