backport of commit d7a31ee77bb149bc2921498ef4ff91c841a8436a

--- a/website/content/partials/raft-panic-old-tls-key.mdx
+++ b/website/content/partials/raft-panic-old-tls-key.mdx
@@ -12,6 +12,6 @@ more than 24h old.  This can happen if the cluster as a whole is down for a day
 or more. It can also happen if a single node is unreachable 24h, or sufficiently
 backlogged in applying raft logs that it's more than a day behind.
 
-Impacted versions: 1.10.1, 1.9.5, 1.8.10.
+Impacted versions: 1.10.1, 1.9.5, 1.8.10.  Versions prior to these are unaffected.
 
 New releases addressing this panic are coming soon.
