--- a/website/content/docs/configuration/seal/alicloudkms.mdx
+++ b/website/content/docs/configuration/seal/alicloudkms.mdx
@@ -10,6 +10,9 @@ description: >-
 
 # `alicloudkms` Seal
 
+-> **Note:** The Seal Wrap functionality is enabled by default. For this reason, seal/HSM must be available throughtout Vault's runtime and not just during the unseal process. Refer to the [Seal Wrap](/docs/enterprise/sealwrap) documenation for more information.
+
+
 The AliCloud KMS seal configures Vault to use AliCloud KMS as the seal wrapping mechanism.
 The AliCloud KMS seal is activated by one of the following:
 
