--- a/website/content/docs/configuration/seal/ocikms.mdx
+++ b/website/content/docs/configuration/seal/ocikms.mdx
@@ -8,6 +8,8 @@ description: |-
 
 # `ocikms` Seal
 
+-> **Note:** The Seal Wrap functionality is enabled by default. For this reason, seal/HSM must be available throughtout Vault's runtime and not just during the unseal process. Refer to the [Seal Wrap](/docs/enterprise/sealwrap) documenation for more information.
+
 The OCI KMS seal configures Vault to use OCI KMS as the seal wrapping mechanism.
 The OCI KMS seal is activated by one of the following:
 
