backport of commit cc20d2fffa25f73da095f2096a5fbe626938c31c

--- a/website/content/docs/auth/approle.mdx
+++ b/website/content/docs/auth/approle.mdx
@@ -245,12 +245,12 @@ details.
 
 ## Code Example
 
-The following code snippet demonstrates AppRole authentication with response
+The following example demonstrates AppRole authentication with response
 wrapping.
 
-<CodeTabs heading="AppRole auth with response wrap">
+<CodeTabs>
 
-<CodeBlockConfig lineNumbers>
+<CodeBlockConfig>
 
 ```go
 package main
@@ -329,7 +329,7 @@ func getSecretWithAppRole() (string, error) {
 
 </CodeBlockConfig>
 
-<CodeBlockConfig lineNumbers>
+<CodeBlockConfig>
 
 ```cs
 using System;
