--- a/website/content/docs/auth/aws.mdx
+++ b/website/content/docs/auth/aws.mdx
@@ -747,11 +747,11 @@ details.
 
 ## Code Example
 
-The following code snippet uses the AWS (IAM) auth method to authenticate with Vault.
+The following example uses the AWS (IAM) auth method to authenticate with Vault.
 
-<CodeTabs heading="AWS auth example">
+<CodeTabs>
 
-<CodeBlockConfig lineNumbers>
+<CodeBlockConfig>
 
 ```go
 package main
@@ -813,7 +813,7 @@ func getSecretWithAWSAuthIAM() (string, error) {
 ```
 </CodeBlockConfig>
 
-<CodeBlockConfig lineNumbers>
+<CodeBlockConfig>
 
 ```cs
 using System;
