backport of commit b895bcd78c681519280d4e3a6a77bee5337eaa5f

--- a/website/content/docs/auth/aws.mdx
+++ b/website/content/docs/auth/aws.mdx
@@ -747,7 +747,7 @@ details.
 
 ## Code Example
 
-The following example uses the AWS (IAM) auth method to authenticate with Vault.
+The following example demonstrates the AWS (IAM) auth method to authenticate with Vault.
 
 <CodeTabs>
 
