--- a/website/content/docs/agent/template.mdx
+++ b/website/content/docs/agent/template.mdx
@@ -9,7 +9,7 @@ description: >-
 # Vault Agent Templates
 
 Vault Agent's Template functionality allows Vault secrets to be rendered to files
-using [Consul Template markup](https://github.com/hashicorp/consul-template/blob/v0.27.1/docs/templating-language.md).
+using [Consul Template markup][consul-templating-language].
 
 ## Functionality
 
@@ -36,7 +36,7 @@ retrieved from Vault and rendered locally.
 
 The following links contain additional resources for the templating language used by Vault Agent templating.
 
-- [Consul Templating Documentation](https://github.com/hashicorp/consul-template/blob/v0.27.1/docs/templating-language.md)
+- [Consul Templating Documentation][consul-templating-language]
 - [Go Templating Language Documentation](https://pkg.go.dev/text/template#pkg-overview)
 
 ## Example Template
@@ -54,7 +54,7 @@ KV store:
 
 ## Global Configurations
 
-The top level `template_config` block has the following configuration entries that affect 
+The top level `template_config` block has the following configuration entries that affect
 all templates:
 
 - `exit_on_retry_failure` `(bool: false)` - This option configures Vault Agent
@@ -66,7 +66,7 @@ failures.
   This setting will not change how often Vault Agent Templating renders leased
   secrets.
 
-### Example
+### Example `template_config` Stanza
 
 ```python
 template_config {
@@ -99,7 +99,11 @@ value of `exit_on_retry_failure`.
 
 ## Template Configurations
 
-The top level `template` block has multiple configurations entries:
+The top level `template` block has multiple configuration entries. The
+parameters found in the template configuration section in the consul-template
+[documentation
+page](https://github.com/hashicorp/consul-template/blob/main/docs/configuration.md#templates)
+can be used here:
 
 - `source` `(string: "")` - Path on disk to use as the input template. This
   option is required if not using the `contents` option.
@@ -116,12 +120,19 @@ The top level `template` block has multiple configurations entries:
   template is rendered. The command will only run if the resulting template changes.
   The command must return within 30s (configurable), and it must have a successful
   exit code. Vault Agent is not a replacement for a process monitor or init system.
+  This is deprecated in favor of the `exec` option.
 - `command_timeout` `(duration: 30s)` - This is the maximum amount of time to
-  wait for the optional command to return.
+  wait for the optional command to return. This is deprecated in favor of the
+  `exec` option.
 - `error_on_missing_key` `(bool: false)` - Exit with an error when accessing
   a struct or map field/key that does notexist. The default behavior will print `<no value>`
   when accessing a field that does not exist. It is highly recommended you set this
   to "true".
+- `exec` `(object: optional)` - This is the optional exec block to give a command
+  to be run when the template is rendered. The command will only run if the
+  resulting template changes. The command must return within 30s (configurable),
+  and it must have a successful exit code. The parameters within this object
+  includes the `command` string slice and the `timeout` string value.
 - `perms` `(string: "")` - This is the permission to render the file. If
   this option is left unspecified, Vault Agent will attempt to match the permissions
   of the file that already exists at the destination path. If no file exists at that
@@ -143,7 +154,7 @@ The top level `template` block has multiple configurations entries:
   a new template to disk and triggering a command, separated by a colon (`:`).
 
 
-### Example
+### Example `template` Stanza
 
 ```python
 template {
@@ -194,37 +205,17 @@ using the certificates `validTo` field.
 This does not apply to certificates generated with `generate_lease: true`. If set
 Vault Agent template will apply the non-renewable, leased secret rules.
 
-## Auto Auth and Templating Example
+When Agent's auto-auth triggers a re-authentication, e.g. due to token expiry,
+it generates a new token for Agent's use. This triggers a template server
+restart, which fetched and re-renders a new set of certificates even if existing
+certificates are valid.
+
+## Templating Example
 
 The following demonstrates configuring Vault Agent to template secrets using the
 AppRole Auth method:
 
 ```python
-pid_file = "./pidfile"
-
-vault {
-  address = "https://127.0.0.1:8200"
-}
-
-auto_auth {
-  method {
-    type = "approle"
-
-    config = {
-      role_id_file_path = "/etc/vault/roleid"
-      secret_id_file_path = "/etc/vault/secretid"
-    }
-  }
-
-  sink {
-    type = "file"
-
-    config = {
-      path = "/tmp/file-foo"
-    }
-  }
-}
-
 template_config {
   static_secret_render_interval = "10m"
   exit_on_retry_failure = true
@@ -235,3 +226,5 @@ template {
   destination = "/tmp/agent/render.txt"
 }
 ```
+
+[consul-templating-language]: https://github.com/hashicorp/consul-template/blob/v0.27.1/docs/templating-language.md
