backport of commit aad2c892e31933e27d6d50bbf061b00bf2ab6cbe

--- a/website/content/docs/agent/template.mdx
+++ b/website/content/docs/agent/template.mdx
@@ -212,8 +212,7 @@ certificates are valid.
 
 ## Templating Example
 
-The following demonstrates configuring Vault Agent to template secrets using the
-AppRole Auth method:
+The following demonstrates Vault Agent Templates configuration blocks.
 
 ```python
 template_config {
