Example snippet updates

--- a/website/content/docs/agent/autoauth/index.mdx
+++ b/website/content/docs/agent/autoauth/index.mdx
@@ -189,6 +189,9 @@ These configuration values are common to all Sinks:
 ### Auto Auth Example
 
 ```python
+# Other Vault Agent configuration blocks
+# ...
+
 auto_auth {
   method {
     type = "approle"
