--- a/website/content/docs/agent/autoauth/index.mdx
+++ b/website/content/docs/agent/autoauth/index.mdx
@@ -138,10 +138,11 @@ These are common configuration values that live within the `method` block:
   structure. Values can be an integer number of seconds or a stringish value
   like `5m`.
 
-- `min_backoff` `(string or integer: "1s")` - The initial backoff time Agent 
+- `min_backoff` `(string or integer: "1s")` - The minimum backoff time Agent 
   will delay before retrying after a failed auth attempt. The backoff will start 
   at the configured value and double (with some randomness) after successive 
-  failures, capped by `max_backoff.`
+  failures, capped by `max_backoff.` If Agent templating is being used, this 
+  value is also used as the min backoff time for the templating server.
 
 - `max_backoff` `(string or integer: "5m")` - The maximum time Agent will delay
   before retrying after a failed auth attempt. The backoff will start at `min_backoff` 
