backport of commit 9d74b654251b81841e417ac88c21deff8c21ad66

--- a/website/content/docs/agent/caching/persistent-caches/index.mdx
+++ b/website/content/docs/agent/caching/persistent-caches/index.mdx
@@ -34,7 +34,7 @@ Please see the sidebar for available types and their usage/configuration.
 
 Here is an example of a persistent cache configuration.
 
-```python
+```hcl
 # Other Vault Agent configuration blocks
 # ...
 
