--- a/website/content/docs/agent/index.mdx
+++ b/website/content/docs/agent/index.mdx
@@ -289,7 +289,7 @@ Configuration](#example-configuration) section for an example configuration.)
 
 An example configuration, with very contrived values, follows:
 
-```python
+```hcl
 pid_file = "./pidfile"
 
 vault {
