--- a/website/content/docs/agent/autoauth/index.mdx
+++ b/website/content/docs/agent/autoauth/index.mdx
@@ -147,6 +147,8 @@ These are common configuration values that live within the `method` block:
 - `max_backoff` `(string or integer: "5m")` - The maximum time Agent will delay
   before retrying after a failed auth attempt. The backoff will start at `min_backoff` 
   and double (with some randomness) after successive failures, capped by `max_backoff.`
+  If Agent templating is being used, this value is also used as the max backoff time 
+  for the templating server.
 
 - `config` `(object: required)` - Configuration of the method itself. See the
   sidebar for information about each method.
