Allow callers to choose the entropy source for the random endpoints. (#15213)
* Allow callers to choose the entropy source for the random endpoints

* Put source in the URL for sys as well

* changelog

* docs

* Fix unit tests, and add coverage

* refactor to use a single common implementation

* Update documentation

* one more tweak

* more cleanup

* Readd lost test expected code

* fmt

--- a/website/content/api-docs/secret/transit.mdx
+++ b/website/content/api-docs/secret/transit.mdx
@@ -652,9 +652,9 @@ $ curl \
 
 This endpoint returns high-quality random bytes of the specified length.
 
-| Method | Path                       |
-| :----- | :------------------------- |
-| `POST` | `/transit/random(/:bytes)` |
+| Method | Path                                 |
+| :----- | :----------------------------------- |
+| `POST` | `/transit/random(/:source)(/:bytes)` |
 
 ### Parameters
 
@@ -663,6 +663,11 @@ This endpoint returns high-quality random bytes of the specified length.
 
 - `format` `(string: "base64")` – Specifies the output encoding. Valid options
   are `hex` or `base64`.
+
+- `source` `(string: "platform")` - Specifies the source of the requested bytes.
+  `platform`, the default, sources bytes from the platform's entropy source. 
+  `seal` sources from entropy augmentation (enterprise only).
+  `all` mixes bytes from all available sources.
 
 ### Sample Payload
 
