add api documentation

--- a/website/content/api-docs/secret/transit.mdx
+++ b/website/content/api-docs/secret/transit.mdx
@@ -91,6 +91,146 @@ $ curl \
     http://127.0.0.1:8200/v1/transit/keys/my-key
 ```
 
+## Import Key
+
+This endpoint imports existing key material into a new transit-managed encryption key.
+To import key material into an existing key, see the `import_version/` endpoint.
+
+### Parameters
+
+- `name` `(string: <required>)` – Specifies the name of the encryption key to
+  create. This is specified as part of the URL.
+
+- `ciphertext` `(string: <required>)` - A base64-encoded string that contains
+two values: an ephemeral AES key wrapped using the wrapping key
+returned by Vault and the encryption of the import key material under the
+provided AES key. The wrapped AES key should be the first 512 bytes of the
+ciphertext, and the encrypted key material should be the remaining bytes.
+
+- `type` `(string: <required>)` – Specifies the type of key to create. The
+  currently-supported types are:
+
+  - `aes128-gcm96` – AES-128 wrapped with GCM using a 96-bit nonce size AEAD
+    (symmetric, supports derivation and convergent encryption)
+  - `aes256-gcm96` – AES-256 wrapped with GCM using a 96-bit nonce size AEAD
+    (symmetric, supports derivation and convergent encryption, default)
+  - `chacha20-poly1305` – ChaCha20-Poly1305 AEAD (symmetric, supports
+    derivation and convergent encryption)
+  - `ed25519` – ED25519 (asymmetric, supports derivation). When using
+    derivation, a sign operation with the same context will derive the same
+    key and signature; this is a signing analogue to `convergent_encryption`.
+  - `ecdsa-p256` – ECDSA using the P-256 elliptic curve (asymmetric)
+  - `ecdsa-p384` – ECDSA using the P-384 elliptic curve (asymmetric)
+  - `ecdsa-p521` – ECDSA using the P-521 elliptic curve (asymmetric)
+  - `rsa-2048` - RSA with bit size of 2048 (asymmetric)
+  - `rsa-3072` - RSA with bit size of 3072 (asymmetric)
+  - `rsa-4096` - RSA with bit size of 4096 (asymmetric)
+
+- `allow_rotation` `(bool: false)` - If set, the imported key can be rotated
+within Vault by using the `rotate` endpoint.
+
+- `convergent_encryption` `(bool: false)` – If enabled, the key will support
+  convergent encryption, where the same plaintext creates the same ciphertext.
+  This requires _derived_ to be set to `true`. When enabled, each
+  encryption(/decryption/rewrap/datakey) operation will derive a `nonce` value
+  rather than randomly generate it.
+
+- `derived` `(bool: false)` – Specifies if key derivation is to be used. If
+  enabled, all encrypt/decrypt requests to this named key must provide a context
+  which is used for key derivation.
+
+- `exportable` `(bool: false)` - Enables keys to be exportable. This
+  allows for all the valid keys in the key ring to be exported. Once set, this
+  cannot be disabled.
+
+- `allow_plaintext_backup` `(bool: false)` - If set, enables taking backup of
+  named key in the plaintext format. Once set, this cannot be disabled.
+
+- `auto_rotate_period` `(duration: "0", optional)` – The period at which
+  this key should be rotated automatically. Setting this to "0" (the default)
+  will disable automatic key rotation. This value cannot be shorter than one
+  hour.
+
+### Sample Payload
+
+```json
+{
+  "type": "ed25519",
+  "ciphertext": "..."
+}
+```
+
+### Sample Request
+
+```shell-session
+$ curl \
+    --header "X-Vault-Token: ..." \
+    --request POST \
+    --data @payload.json \
+    http://127.0.0.1:8200/v1/transit/keys/my-key/import
+```
+
+## Import Key Version
+
+This endpoint imports new key material into an existing imported key.
+
+**Note**: Vault-generated keys cannot be used for importing key material.
+Only keys that were previously imported into Vault can import new key
+material from an external source.
+
+### Parameters
+
+- `name` `(string: <required>)` – Specifies the name of the encryption key to
+  create. This is specified as part of the URL.
+
+- `ciphertext` `(string: <required>)` - A base64-encoded string that contains
+two values: an ephemeral AES key wrapped using the wrapping key
+returned by Vault and the encryption of the import key material under the
+provided AES key. The wrapped AES key should be the first 512 bytes of the
+ciphertext, and the encrypted key material should be the remaining bytes.
+
+### Sample Payload
+
+```json
+{
+  "ciphertext": "..."
+}
+```
+
+### Sample Request
+
+```shell-session
+$ curl \
+    --header "X-Vault-Token: ..." \
+    --request POST \
+    --data @payload.json \
+    http://127.0.0.1:8200/v1/transit/keys/my-key/import_version
+```
+
+## Get Wrapping Key
+
+This endpoint is used to retrieve the wrapping key to use for importing keys.
+The returned key will be a 4096-bit RSA public key.
+
+### Sample Request
+
+```shell-session
+$ curl \
+    --header "X-Vault-Token: ..." \
+    --request GET \
+    http://127.0.0.1:8200/v1/transit/wrapping_key
+```
+
+### Sample Response
+
+```json
+{
+  "data": {
+    "public_key": "..."
+  },
+}
+```
+
 ## Read Key
 
 This endpoint returns information about a named encryption key. The `keys`
@@ -135,7 +275,8 @@ $ curl \
     "supports_encryption": true,
     "supports_decryption": true,
     "supports_derivation": true,
-    "supports_signing": false
+    "supports_signing": false,
+    "imported": false
   }
 }
 ```
