Add section on vault cli with DER/PEM response formats
 - Add [1] links next to the DER/PEM format entries within various PKI
   response tables. These link to a new section explaining that the vault
   cli does not support DER/PEM response formats
 - Remove repetition of vault cli blurb in various description fields.
 - Fix up some typos

--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -61,6 +61,7 @@ update your API calls accordingly.
 - [Notes on Personas](#notes-on-personas)
 - [Cluster Scalability](#cluster-scalability)
 - [Managed Key](#managed-keys) (Enterprise Only)
+- [Vault CLI with DER/PEM responses](#vault-cli-with-der-pem-responses)
 
 ## Notice About New Multi-Issuer Functionality
 
@@ -142,11 +143,7 @@ $ curl \
 
 ### Read Issuer Certificate
 
-This endpoint retrieves the specified issuer's certificate. When the format
-of the endpoint is notated below as JSON, this is a standard Vault data
-structure that can be read by the Vault CLI. Otherwise, the DER and PEM
-formats cannot be read via the `vault read` CLI; another client must be
-used.
+This endpoint retrieves the specified issuer's certificate.
 
 Note that the response differs between the legacy `/pki/cert/ca`
 path and the newer `/pki/issuer/:issuer_ref/json` path; the latter
@@ -155,14 +152,14 @@ endpoint.
 
 These are unauthenticated endpoints.
 
-| Method | Path                           | Issuer    | Format |
-| :----- | :----------------------------- | :-------- | :----- |
-| `GET`  | `/pki/cert/ca`                 | `default` | JSON   |
-| `GET`  | `/pki/ca`                      | `default` | DER    |
-| `GET`  | `/pki/ca/pem`                  | `default` | PEM    |
-| `GET`  | `/pki/issuer/:issuer_ref/json` | Selected  | JSON   |
-| `GET`  | `/pki/issuer/:issuer_ref/der`  | Selected  | DER    |
-| `GET`  | `/pki/issuer/:issuer_ref/pem`  | Selected  | PEM    |
+| Method | Path                           | Issuer    | Format                                                                            |
+| :----- | :----------------------------- | :-------- |:----------------------------------------------------------------------------------|
+| `GET`  | `/pki/cert/ca`                 | `default` | JSON                                                                              |
+| `GET`  | `/pki/ca`                      | `default` | DER [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/ca/pem`                  | `default` | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/issuer/:issuer_ref/json` | Selected  | JSON                                                                              |
+| `GET`  | `/pki/issuer/:issuer_ref/der`  | Selected  | DER [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/issuer/:issuer_ref/pem`  | Selected  | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
 
 #### Parameters
 
@@ -201,20 +198,17 @@ $ curl \
 ### Read Default Issuer Certificate Chain
 
 This endpoint retrieves the default issuer's CA certificate chain, including
-the default issuer. When the format of the endpoint is notated below as JSON,
-this is a standard Vault data structure that can be read by the Vault CLI.
-Otherwise, the PEM format cannot be read via the `vault read` CLI; another
-client must be used.
+the default issuer.
 
 To read [other issuers' chains](#read-issuer-certificate), use the
 `/pki/issuer/:issuer_ref/json` endpoint instead.
 
 These are unauthenticated endpoints.
 
-| Method | Path                 | Issuer    | Format |
-| :----- | :------------------- | :-------- | :----- |
-| `GET`  | `/pki/ca_chain`      | `default` | PEM    |
-| `GET`  | `/pki/cert/ca_chain` | `default` | JSON   |
+| Method | Path                 | Issuer    | Format                                                                            |
+| :----- | :------------------- | :-------- |:----------------------------------------------------------------------------------|
+| `GET`  | `/pki/ca_chain`      | `default` | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/cert/ca_chain` | `default` | JSON                                                                              |
 
 ~> **Note**: Vault now returns the full chain (including the default issuer's
    certificate and all parent issuers) in these responses.
@@ -236,10 +230,7 @@ $ curl \
 
 ### Read Issuer CRL
 
-This endpoint retrieves the specified issuer's CRL. When the format is
-notated below as JSON, the response is a standard Vault data structure that
-can be read by the Vault CLI. Otherwise, the DER and PEM formats cannot be
-read via the `vault read` CLI; another client must be used.
+This endpoint retrieves the specified issuer's CRL.
 
 Note that the response differs between the legacy `/pki/cert/crl` path and
 the newer `/pki/issuer/:issuer_ref/crl` path; the latter correctly places the
@@ -248,14 +239,14 @@ in the `certificate` field.
 
 These are unauthenticated endpoints.
 
-| Method | Path                              | Issuer    | Format |
-| :----- | :-------------------------------- | :-------- | :----- |
-| `GET`  | `/pki/cert/crl`                   | `default` | JSON   |
-| `GET`  | `/pki/crl`                        | `default` | DER    |
-| `GET`  | `/pki/crl/pem`                    | `default` | PEM    |
-| `GET`  | `/pki/issuer/:issuer_ref/crl`     | Selected  | JSON   |
-| `GET`  | `/pki/issuer/:issuer_ref/crl/der` | Selected  | DER    |
-| `GET`  | `/pki/issuer/:issuer_ref/crl/pem` | Selected  | PEM    |
+| Method | Path                              | Issuer    | Format                                                                            |
+| :----- | :-------------------------------- | :-------- |:----------------------------------------------------------------------------------|
+| `GET`  | `/pki/cert/crl`                   | `default` | JSON                                                                              |
+| `GET`  | `/pki/crl`                        | `default` | DER [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/crl/pem`                    | `default` | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/issuer/:issuer_ref/crl`     | Selected  | JSON                                                                              |
+| `GET`  | `/pki/issuer/:issuer_ref/crl/der` | Selected  | DER [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/issuer/:issuer_ref/crl/pem` | Selected  | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
 
 #### Parameters
 
@@ -330,10 +321,7 @@ $ curl \
 ### Read Certificate
 
 This endpoint retrieves the certificate specified by its serial number,
-including issued certificates. When the format is notated below as JSON,
-the response is a standard Vault data structure that can be read by the
-Vault CLI. Otherwise, the DER and PEM formats cannot be read via the
-`vault read` CLI; another client must be used.
+including issued certificates.
 
 ~> Note: With the exception of the special values (`ca`, `crl`, and
    `ca_chain`), `/pki/cert/:serial` will return different results on
@@ -342,11 +330,11 @@ Vault CLI. Otherwise, the DER and PEM formats cannot be read via the
 
 These are unauthenticated endpoints.
 
-| Method | Path                        | Format |
-| :----- | :-------------------------- | :----- |
-| `GET`  | `/pki/cert/:serial`         | JSON   |
-| `GET`  | `/pki/cert/:serial/raw`     | DER    |
-| `GET`  | `/pki/cert/:serial/raw/pem` | PEM    |
+| Method | Path                        | Format                                                                            |
+| :----- | :-------------------------- |:----------------------------------------------------------------------------------|
+| `GET`  | `/pki/cert/:serial`         | JSON                                                                              |
+| `GET`  | `/pki/cert/:serial/raw`     | DER [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
+| `GET`  | `/pki/cert/:serial/raw/pem` | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
 
 #### Parameters
 
@@ -515,7 +503,7 @@ path).
   to an issuer. This parameter is part of the request URL.
 
 ~> Note: This parameter is not present on the `/pki/issue/:name` path and
-   takes its value from the role's `issuer_ref` field. 
+   takes its value from the role's `issuer_ref` field.
 
 - `common_name` `(string: <required>)` - Specifies the requested CN for the
   certificate. If the CN is allowed by role policy, it will be issued. If more
@@ -1660,7 +1648,7 @@ do so, import a new issuer and a new `issuer_id` will be assigned.
   - `err`, to error if the computed `NotAfter` exceeds that of this issuer;
   - `truncate` to silently truncate the requested `NotAfter` value to that
     of this issuer; or
-  - `permit` to allow this issuance to suceed with a `NotAfter` value
+  - `permit` to allow this issuance to succeed with a `NotAfter` value
     exceeding that of this issuer.
 
 ~> Note: Not all values result in leaf certificates that can be validated
@@ -1800,8 +1788,8 @@ $ curl \
 
 ### Update Key
 
-This endpoint allows an operator to manage a single key. Currently the only
-paramter that is configurable is the key's name.
+This endpoint allows an operator to manage a single key. Currently, the only
+parameter that is configurable is the key's name.
 
 Note that it is not possible to change the private key of this key; to
 do so, import a new key and a new `key_id` will be assigned.
@@ -2388,7 +2376,7 @@ parameter.
 - `ocsp_servers` `(array<string>: nil)` - Specifies the URL values for the OCSP
   Servers field. This can be an array or a comma-separated string list. See also
   [RFC 5280 Section 4.2.2.1](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.2.1)
-  for information about about the Authority Information Access field.
+  for information about the Authority Information Access field.
 
 #### Sample Payload
 
@@ -2615,3 +2603,10 @@ arguments detailing private key attributes are specified such as `key_type` or
 
 Once either of the certificate APIs have successfully executed, all other PKI
 operations behave the same, with no other special configuration or parameters required.
+
+
+## Vault CLI with DER/PEM responses
+
+The Vault CLI can only display JSON responses. For APIs that return non-JSON formatted
+data such as DER and PEM formats, `vault read` will fail and another client such as curl
+must be used.
