Clarify some language in the API docs
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -68,10 +68,10 @@ update your API calls accordingly.
 
 ## Notice About New Multi-Issuer Functionality
 
-Vault now allows a single PKI mount to have multiple Certificate Authority
-(CA) certificates ("issuers") in a single mount, for the purpose of
-facilitating rotation. All issuers within a single mount are treated as a
-single authority, meaning that:
+Vault since 1.11.0 allows a single PKI mount to have multiple Certificate
+Authority (CA) certificates ("issuers") in a single mount, for the purpose
+of facilitating rotation. All issuers within a single mount are treated as a
+single Authority, meaning that:
 
  1. Certificate Revocation List (CRL) configuration is common to all issuers,
  2. All authority access URLs are common to all issuers,
@@ -607,10 +607,10 @@ where the key is not exposed). If you don't know whether you need this
 endpoint, you most likely should be using a different endpoint (such as
 `sign-intermediate`).
 
-| Method | Path                                       | Issuer    | `sudo` capability |
-| :----- | :----------------------------------------- | :-------- | :---------------- |
-| `POST` | `/pki/root/sign-self-issued`               | `default` | yes               |
-| `POST` | `/pki/issuer/:issuer_ref/sign-self-issued` | Selected  | no                |
+| Method | Path                                       | Issuer    | Requires `sudo` capability |
+| :----- | :----------------------------------------- | :-------- | :------------------------- |
+| `POST` | `/pki/root/sign-self-issued`               | `default` | yes                        |
+| `POST` | `/pki/issuer/:issuer_ref/sign-self-issued` | Selected  | no                         |
 
 #### Parameters
 
@@ -876,7 +876,7 @@ $ curl \
 
 This endpoint retrieves the specified issuer's certificate.
 
-Note that the response differs between the legacy `/pki/cert/ca`
+Note that the response differs between the older `/pki/cert/ca`
 path and the newer `/pki/issuer/:issuer_ref/json` path; the latter
 includes the full `ca_chain` of the issuer, removing the need for a separate
 endpoint.
@@ -941,8 +941,9 @@ These are unauthenticated endpoints.
 | `GET`  | `/pki/ca_chain`      | `default` | PEM [\[1\]](#vault-cli-with-der-pem-responses "Vault CLI With DER/PEM Responses") |
 | `GET`  | `/pki/cert/ca_chain` | `default` | JSON                                                                              |
 
-~> **Note**: Vault now returns the full chain (including the default issuer's
-   certificate and all parent issuers) in these responses.
+~> **Note**: As of Vault 1.11.0, these endpoints now return the full chain
+   (including the default issuer's certificate and all parent issuers known
+   to Vault) in these responses.
 
 #### Sample Request
 
@@ -963,7 +964,7 @@ $ curl \
 
 This endpoint retrieves the specified issuer's CRL.
 
-Note that the response differs between the legacy `/pki/cert/crl` path and
+Note that the response differs between the older `/pki/cert/crl` path and
 the newer `/pki/issuer/:issuer_ref/crl` path; the latter correctly places the
 PEM-encoded CRL in the `crl` field whereas the former incorrectly places it
 in the `certificate` field.
@@ -1079,9 +1080,10 @@ These are unauthenticated endpoints.
   - `crl` for the _default_ issuer's CRL
   - `ca_chain` for the _default_ issuer's CA trust chain.
 
-~> **Note**: Vault now returns the full chain (including this certificate and
-   all parent issuers) in the `ca_chain` response, for both the `certificate`
-   and newer `ca_chain` fields. The root certificate is no longer elided.
+~> **Note**: As of Vault 1.11.0, these endpoints return the full chain
+   (including this certificate and all parent issuers known to Vault) in
+   the `ca_chain` response, for both the `certificate` and newer `ca_chain`
+   fields. The root certificate is no longer elided.
 
 #### Sample Request
 
@@ -2565,7 +2567,8 @@ administrators to cut the size of the CRL if it contains a number of
 certificates that have now expired, but has not been rotated due to no further
 certificates being revoked. If no certificates have been revoked, but the CRL
 has expired or is close to expiring, administrators **must** hit this endpoint
-to manually rotate the CRL.
+to manually rotate the CRL. This rotates all CRLs on the present cluster,
+and **must** be called on every cluster.
 
 ~> **Note**: Mirroring the behavior of earlier Vault versions, we add
    certificates revoked by an unknown issuer to the default issuer's CRL.
