--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -1790,7 +1790,7 @@ This endpoint allows an operator to fetch information about an existing key.
 - `key_ref` `(string: <required>)` - Reference to an existing key,
   either by Vault-generated identifier, the literal string `default` to
   refer to the currently configured default key, or the name assigned
-  to an key. This parameter is part of the request URL.
+  to a key. This parameter is part of the request URL.
 
 #### Sample Request
 
