--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -1833,7 +1833,7 @@ do so, import a new key and a new `key_id` will be assigned.
 - `key_ref` `(string: <required>)` - Reference to an existing key,
   either by Vault-generated identifier, the literal string `default` to
   refer to the currently configured default key, or the name assigned
-  to an key. This parameter is part of the request URL.
+  to a key. This parameter is part of the request URL.
 
 - `key_name` `(string: "")` - Provides a name to the specified key. The
   name must be unique across all keys and not be the reserved value
