--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -825,7 +825,7 @@ Finally, the list of issuing certificates is public information in this
 mount.
 
 However, the endpoint for [listing all issuers](#list-issuers) in this
-mount) is authenticated, though not generally considered privileged
+mount is authenticated, though not generally considered privileged
 information from a PKI perspective; organizations may choose to lock
 this down as they see fit.
 
