--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -2311,7 +2311,7 @@ parameter.
 - `issuing_certificates` `(array<string>: nil)` - Specifies the URL values for
   the Issuing Certificate field. This can be an array or a comma-separated
   string list. See also [RFC 5280 Section 4.2.2.1](https://datatracker.ietf.org/doc/html/rfc5280#section-4.2.2.1)
-  for information about about the Authority Information Access field.
+  for information about the Authority Information Access field.
 
 - `crl_distribution_points` `(array<string>: nil)` - Specifies the URL values
   for the CRL Distribution Points field. This can be an array or a
