--- a/website/content/api-docs/secret/pki.mdx
+++ b/website/content/api-docs/secret/pki.mdx
@@ -971,6 +971,8 @@ in the `certificate` field.
 
 These are unauthenticated endpoints.
 
+~> **Note**: As of Vault 1.11.0, these endpoints now serve a [version 2](https://datatracker.ietf.org/doc/html/rfc5280#section-5.1.2.1) CRL response.
+
 | Method | Path                              | Issuer    | Format                                                                            |
 | :----- | :-------------------------------- | :-------- |:----------------------------------------------------------------------------------|
 | `GET`  | `/pki/cert/crl`                   | `default` | JSON                                                                              |
