Fixed typos in docs

--- a/website/content/docs/commands/index.mdx
+++ b/website/content/docs/commands/index.mdx
@@ -382,7 +382,8 @@ used.
 HTTP or HTTPS proxy location which should be used by all requests to access Vault.
  When present, this overrides the default proxy resolution behavior.
 Format should be `http://server:port` or `https://server:port`.
-(See ``VAULT_PROXY_ADDR` below)
+
+(See `VAULT_PROXY_ADDR` below).
 
 ### `VAULT_PROXY_ADDR`
 
