Add support for Duo client IP address forwarding

--- a/website/content/api-docs/secret/identity/mfa/duo.mdx
+++ b/website/content/api-docs/secret/identity/mfa/duo.mdx
@@ -26,8 +26,10 @@ This endpoint defines an MFA method of type Duo.
 - `api_hostname` `(string: <required>)` - API hostname for Duo.
 
 - `push_info` `(string)` - Push information for Duo.
--
+
 - `use_passcode` `(bool: false)` - If true, the user is reminded to use the passcode upon MFA validation.
+
+- `forward_request_addr` `(bool: false)` - If true, forwards the clients address to Duo during authentication.
 
 ### Sample Payload
 
@@ -87,6 +89,7 @@ $ curl \
 {
   "data": {
     "api_hostname": "api-2b5c39f5.duosecurity.com",
+    "forward_request_addr": false,
     "id": "4194659f-139b-400b-b5dd-86bfb726759d",
     "integration_key": "BIACEUEAXI20BNWTEYXT",
     "pushinfo": "",
