Consistent quick-start doc naming
Signed-off-by: Alexander Scheel <alex.scheel@hashicorp.com>

--- a/website/content/docs/secrets/pki/quick-start-intermediate-ca.mdx
+++ b/website/content/docs/secrets/pki/quick-start-intermediate-ca.mdx
@@ -4,13 +4,14 @@ page_title: PKI - Secrets Engines
 description: The PKI secrets engine for Vault generates TLS certificates.
 ---
 
-# PKI Secrets Engine - Setting Up an Intermediate CA
+# PKI Secrets Engine - Quick Start - Intermediate CA Setup
 
-In the Quick Start guide, certificates were issued directly from the root
-certificate authority. As described in the example, this is not a recommended
-practice. This guide builds on the previous guide's root certificate authority
-and creates an intermediate authority using the root authority to sign the
-intermediate's certificate.
+In the [first Quick Start guide](/docs/secrets/pki/quick-start-root-ca),
+certificates were issued directly from the root certificate authority.
+As described in the example, this is not a recommended practice. This guide
+builds on the previous guide's root certificate authority and creates an
+intermediate authority using the root authority to sign the intermediate's
+certificate.
 
 #### Mount the backend
 
