--- a/website/content/docs/secrets/pki/quick-start-root-ca.mdx
+++ b/website/content/docs/secrets/pki/quick-start-root-ca.mdx
@@ -4,7 +4,7 @@ page_title: PKI - Secrets Engines
 description: The PKI secrets engine for Vault generates TLS certificates.
 ---
 
-# PKI Secrets Engine - Quick Start
+# PKI Secrets Engine - Quick Start - Root CA Setup
 
 This document provides a brief overview of setting up a Vault PKI Secrets
 Engine with a Root CA certificate.
