--- a/website/content/docs/commands/index.mdx
+++ b/website/content/docs/commands/index.mdx
@@ -394,7 +394,7 @@ Format should be `http://server:port` or `https://server:port`.
 ~> Note: When using `VAULT_HTTP_PROXY` or `VAULT_PROXY_ADDR` any of the standard
  proxy variables found in the environment will be ignored.
 Specifically `HTTP_PROXY`, `HTTPS_PROXY` and `NO_PROXY`.
-All requests will resolve the specified proxy, there is no way to exclude
+All requests will resolve the specified proxy; there is no way to exclude
  domains from consulting the proxy server.
 
 ~> Note: If both `VAULT_HTTP_PROXY` and `VAULT_PROXY_ADDR` environment
